# OpenGLWinDemo

./: CMakeLists.txt  README.md  run.bat
include/: application.h
include/glad/: glad.h
src/: glad.c  test.cpp
